Reduced dependencies, genus is now part of config, Distinguished error messages

--- a/src/Conf/config.ini
+++ b/src/Conf/config.ini
@@ -21,7 +21,18 @@ gmail_pass =
 
 [kraken]
 db = 
+
+[conda]
 krona = 
+interop = 
 
 [uploader]
 irida = 
+
+[genus]
+listeria = 
+e.coli = 
+escherichia = 
+shigella = 
+salmonella = 
+campylobacter
