--- a/src/Package/sequdas.yml
+++ b/src/Package/sequdas.yml
@@ -13,14 +13,14 @@ dependencies:
   - boost=1.63.0=py27_5
   - boost-cpp=1.63.0=2
   - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2018.11.29=ha4d7672_0
-  - certifi=2018.11.29=py27_1000
+  - ca-certificates=2019.3.9=hecc5488_0
+  - certifi=2019.3.9=py27_0
   - cffi=1.12.2=py27hf0e25f4_1
   - chardet=3.0.4=py27_1003
   - clyent=1.2.2=py_1
   - cmake=3.13.2=h8d4ced6_1000
-  - cryptography=2.5=py27hb7f436b_1
-  - curl=7.64.0=h646f8bb_0
+  - cryptography=2.6.1=py27h72c5cf5_0
+  - curl=7.64.1=hf8cf82a_0
   - decorator=4.4.0=py_0
   - enum34=1.1.6=py27_1001
   - expat=2.2.6=he6710b0_0
@@ -33,6 +33,7 @@ dependencies:
   - gnu-wget=1.18=3
   - icu=58.2=hf484d3e_1000
   - idna=2.8=py27_1000
+  - illumina-interop=1.1.8=hfc679d8_0
   - ipaddress=1.0.22=py_1
   - ipython_genutils=0.2.0=py_1
   - jellyfish=1.1.12=h2d50403_0
@@ -41,8 +42,9 @@ dependencies:
   - kaiju=1.6.3=hd28b015_0
   - kraken=1.1=h470a237_2
   - kraken2=2.0.7_beta=pl526h6bb024c_2
-  - krb5=1.16.3=hc83ff2d_1000
-  - libcurl=7.64.0=h01ee5af_0
+  - krb5=1.16.3=h05b26f9_1001
+  - krona=2.7=pl526_3
+  - libcurl=7.64.1=hda55be3_0
   - libdeflate=1.0=h14c3975_1
   - libedit=3.1.20170329=hf8c457e_1001
   - libffi=3.2.1=hf484d3e_1005
@@ -50,7 +52,7 @@ dependencies:
   - libgcc-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h14c3975_1004
   - libpng=1.6.36=h84994c4_1000
-  - libssh2=1.8.0=h1ad7b7a_1003
+  - libssh2=1.8.2=h22169c7_1
   - libstdcxx-ng=7.3.0=hdf63c60_0
   - libuuid=2.32.1=h14c3975_1000
   - libuv=1.26.0=h14c3975_0
@@ -59,7 +61,7 @@ dependencies:
   - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
   - openjdk=11.0.1=h516909a_1015
-  - openssl=1.0.2p=h14c3975_1002
+  - openssl=1.1.1b=h14c3975_1
   - pcre=8.41=hf484d3e_1003
   - perl=5.26.2=h14c3975_1001
   - pip=19.0.2=py27_0
@@ -68,15 +70,15 @@ dependencies:
   - pyopenssl=19.0.0=py27_0
   - pyrsistent=0.14.11=py27h14c3975_0
   - pysocks=1.6.8=py27_1002
-  - python=2.7.15=h938d71a_1006
+  - python=2.7.15=h721da81_1008
   - python-dateutil=2.8.0=py_0
   - pytz=2018.9=py_0
   - pyyaml=5.1=py27h14c3975_0
   - readline=7.0=hf8c457e_1001
   - requests=2.21.0=py27_1000
-  - rhash=1.3.6=hb7f436b_0
+  - rhash=1.3.6=h14c3975_1001
   - rsync=3.1.3=h84994c4_1002
-  - samtools=1.9=h57cc563_6
+  - samtools=1.9=h8571acd_11
   - setuptools=40.8.0=py27_0
   - six=1.12.0=py27_1000
   - sqlite=3.26.0=h67949de_1000
