--- a/src/Conf/config.ini
+++ b/src/Conf/config.ini
@@ -1,3 +1,38 @@
+[basic]
+write_logfile_details = 
+admin_email = 
+logfile_dir = 
+send_email =
+server_dir = 
+
 [reporter]
 reporter_ssh_host = 
 qc_dir = 
+
+[mysql_account]
+mysql_host = 
+mysql_user = 
+mysql_passwd = 
+mysql_db = 
+
+[email_account]
+gmail_user = 
+gmail_pass = 
+
+[kraken]
+db = 
+
+[conda]
+krona = 
+interop = 
+
+[uploader]
+irida = 
+
+[genus]
+listeria = 
+e.coli = 
+escherichia = 
+shigella = 
+salmonella = 
+campylobacter
