--- a/sequdas_qc/Conf/config.ini
+++ b/sequdas_qc/Conf/config.ini
@@ -1,38 +1,38 @@
 [basic]
-write_logfile_details = a
-admin_email = a
-logfile_dir = a
-send_email = a
-server_dir = a
+write_logfile_details = 
+admin_email = 
+logfile_dir = 
+send_email = 
+server_dir =
 
 [reporter]
-reporter_ssh_host = a
-qc_dir = a
+reporter_ssh_host = 
+qc_dir = 
 
 [mysql_account]
-mysql_host = a
-mysql_user = a
-mysql_passwd = a
-mysql_db = a
+mysql_host = 
+mysql_user = 
+mysql_passwd = 
+mysql_db = 
 
 [email_account]
-gmail_user = a 
-gmail_pass = a
+gmail_user =  
+gmail_pass = 
 
 [kraken]
-db = a
+db = 
 
 [conda]
-krona = a
-interop = a
+krona = 
+interop = 
 
 [uploader]
-irida = a
+irida = 
 
 [genus]
-listeria = 1
-e.coli = 1
-escherichia = 1
-shigella = 1
-salmonella = 1
-campylobacter = 1
+listeria = 
+e.coli = 
+escherichia = 
+shigella = 
+salmonella = 
+campylobacter = 
