Use argparse for argument parsing, allow passing config file as argument

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,1 @@
-include *.txt
-recursive-include sequdas_qc/Conf * .ini
-recursive-include sequdas_qc/cluster * .py
-recursive-include sequdas_qc/lib * .py
+include sequdas_qc/conf/config.ini
