--- a/sequdas_qc/conf/config.ini
+++ b/sequdas_qc/conf/config.ini
@@ -2,8 +2,8 @@
 write_logfile_details = 
 admin_email = 
 logfile_dir = 
-send_email =
-server_dir = 
+send_email = 
+server_dir =
 
 [reporter]
 reporter_ssh_host = 
@@ -16,7 +16,7 @@ mysql_passwd =
 mysql_db = 
 
 [email_account]
-gmail_user = 
+gmail_user =  
 gmail_pass = 
 
 [kraken]
@@ -35,4 +35,4 @@ e.coli =
 escherichia = 
 shigella = 
 salmonella = 
-campylobacter
+campylobacter = 
